Added and implemented Flatlist, updated  sytlesheet

--- a/app.json
+++ b/app.json
@@ -7,9 +7,10 @@
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/splashScreen2.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#ffffff",
+      "width": "100%"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
