--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-native-storage": "^0.2.4",
     "react-native-svg": "^12.4.3",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "0.17.7"
+    "react-native-web": "0.17.7",
+    "expo-updates": "~0.13.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
